feat: add postgre and run bot with Compose
